Fixed visible form popup and added name validation

--- a/src/sass/_contact.scss
+++ b/src/sass/_contact.scss
@@ -276,7 +276,7 @@
 		text-align: center;
 		width: 300px;
 		height: 100px;
-		transform: translateX(1000px);
+		transform: translateX(100vh);
 		border-radius: 10px;
 		background-color: rgba(0, 0, 0, 0.7);
 		backdrop-filter: blur(3px);
